# dns-watchdog

./: Cargo.toml  README.md
.github/: rust.yml
.github/workflows/: rust.yml
src/: main.rs
